# aquasense

./: LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: unit-test.yml
coverage/: index.html
emulation/: README.md
emulation/hydroscat/: HydroScat.ino  data.h
src/aquasense/common/: arghelp.py  sensor.py
src/aquasense/hydroscat/: __init__.py  calibrate.py  driver.py  extract_raw.py  hydroscat.py
src/aquasense/ramses/: driver.py  ramses.py
tests/hydroscat/: test_calibrate.py  test_extract_raw.py  test_hydroscat.py
tests/hydroscat/data/: sample.raw
