# Package creation file.
#
# For editable package: pip install -e .
#
# See also:
# - https://packaging.python.org/en/latest/tutorials/packaging-projects/
# - https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/
# - https://docs.pytest.org/en/latest/explanation/goodpractices.html
# - https://realpython.com/python-application-layouts/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aquasense"
version = "0.0.1"
dependencies = [
    "pyserial>=3.4",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
